# firecrab

./: .gitignore  Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: api-error.md  api.md  browser-test.md  guest-network-smoke.md  net-helper-smoke.md  net-helper.md  net-helper.py  task-cicd-github-actions.md  task-network-configuration-dashboard.md  task-vm-disk-capacity.md  troubleshooting.md  vm-tap-automation-smoke.md  web.md  week1-result.md  week3-tasks.md
docs/bugs/: alpine-network-ready-races-dhcpcd.md  alpine-official-kernel-cant-mount-root.md  dhcp-never-reaches-guest.md  terminal-cursor-position-echo-loop.md  vm-killed-mid-boot-under-concurrent-load.md  vm-outbound-forward-blocked-by-ufw.md  vm-startup-stuck-under-concurrent-load.md
docs/firecrab-smoke/: bridge.md  net-helper.md  net-helper.py
docs/firecrab-smoke/docs/: bridge.md  net-helper.md
docs/firecrab-smoke/script/: net-helper.py
docs/firecracker-menual/: README.md  boot-microvm.md  image-setup.md  network-basic.md  run-log-capture.md  serial-console.md  ssh-access.md
docs/tests/: alpine-linux-template.md  cicd-github-actions.md  frontend-react-migration.md  microvm-terminal.md  nat-firewall-automation.md  nat-firewall-automation.sh  net-helper-client.py  vm-detail-modal.md  vm-disk-capacity.md  vm-ip-mac-allocation.md  vm-ip-mac-allocation.py  vm-network-isolation.md  vm-resource-update.md  vm-startup-progress.md
firecrab-api/: Cargo.toml
firecrab-api-go/: go.mod  handlers.go  main.go  model.go  store.go
firecrab-api-types/: Cargo.toml
firecrab-api-types/src/: lib.rs
firecrab-api/src/: console.rs  error.rs  extract.rs  firecracker.rs  handlers.rs  ipam.rs  main.rs  model.rs  network.rs  network_policy.rs  persistence.rs  rootfs.rs  server.rs  state.rs  templates.rs
firecrab-api/src/handlers/: console.rs  network.rs  packages.rs  vms.rs
firecrab-frontend/: index.html  package-lock.json  package.json  vite.config.ts
firecrab-frontend/src/: App.tsx  index.css  model.ts
firecrab-frontend/src/api/: client.ts
firecrab-frontend/src/bindings/: ApiError.ts  CreateVmRequest.ts  EgressPolicy.ts  ErrorResponse.ts  HostStatusResponse.ts  NetworkInfoResponse.ts  StartupStep.ts  UpdateVmResourcesRequest.ts  VmLogResponse.ts  VmResponse.ts  VmState.ts  index.ts
firecrab-frontend/src/components/: Banner.tsx  Console.tsx  CreateVm.tsx  HostInfoModal.tsx  RamStepper.tsx  VmDetailModal.tsx  VmTable.tsx
firecrab-helper-protocol/: Cargo.toml
firecrab-helper-protocol/src/: framing.rs  lib.rs  network.rs
firecrab-net-helper/: Cargo.toml
firecrab-net-helper/src/: bridge.rs  dhcp.rs  firewall.rs  main.rs  nat.rs  tap.rs
scripts/: dev-net-helper.sh  install-firecracker.sh  kvm-check.sh  vm-batch.sh
scripts/firecracker-menual/: boot-microvm.sh  install-alpine-rootfs.sh  install-firecracker.sh  install-linux-kernel.sh  install-ubuntu-roofs.sh  run-serial-shell.sh  serial-console.sh
