[workspace]
resolver = "3"
members = [
    "firecrab-api",
    "firecrab-api-types",
    "firecrab-helper-protocol",
    "firecrab-net-helper",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"

[workspace.dependencies]
sha2 = "0.10.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.19.0", features = ["serde"] }

# unoptimized sha2 is ~50-100x slower, turning multi-GB template hashing
# (startup verification + per-request re-verification) into a multi-second stall.
[profile.dev.package.sha2]
opt-level = 3
