[package]
name = "firecrab-api-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
ts-rs = { version = "12", optional = true, features = ["uuid-impl"] }

[dev-dependencies]
serde_json = { workspace = true }

[features]
ts-rs = ["dep:ts-rs"]

