[package]
name = "firecrab-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
firecrab-api-types = { path = "../firecrab-api-types" }
firecrab-helper-protocol = { path = "../firecrab-helper-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { workspace = true, features = ["v4"] }
