[package]
name = "firecrab-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
firecrab-api-types = { path = "../firecrab-api-types" }
firecrab-helper-protocol = { path = "../firecrab-helper-protocol" }
futures-util = "0.3"
libc = "0.2.186"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
