[package]
name = "firecrab-helper-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["io-util"] }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt"] }

